@@ -1,6 +1,5 @@
 package com.fr.eql.ai115.bellybuddyback.service;
 
-
 import com.fr.eql.ai115.bellybuddyback.model.UserEntity;
 import com.fr.eql.ai115.bellybuddyback.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -9,23 +8,22 @@ import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
-import java.util.List;
+
+import java.util.Collections;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
-  private UserRepository userRepository;
 
-  @Autowired
-  public CustomUserDetailsService(UserRepository userRepository) {
-    this.userRepository = userRepository;
-  }
+private UserRepository userRepository;
 
+@Autowired
+public CustomUserDetailsService(UserRepository userRepository) {
+  this.userRepository = userRepository;
+}
   @Override
   public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
     UserEntity user = userRepository.findByUsername(username)
       .orElseThrow(() -> new UsernameNotFoundException("Username " + username + " not found"));
-    return new User(user.getUsername(), user.getPassword(), List.of());
+    return new User(user.getUsername(), user.getPassword(), Collections.emptyList());
   }
-
-
 }
